# hurricane-in-rust

./: .gitignore  README.md
benchmarks/click_log/: Cargo.toml  config.json  performance.txt
benchmarks/click_log/src/: main.rs
hurricane/: Cargo.toml  main_config.json
hurricane/src/: lib.rs  macros.rs  main.rs  prelude.rs
hurricane/src/app/: app_conf.rs  app_master.rs  app_master_core.rs  blueprint.rs  hurricane_application.rs  mod.rs
hurricane/src/backend/: hurricane_backend.rs  hurricane_io.rs  mod.rs
hurricane/src/common/: advanced_serializer.rs  bag.rs  chunk.rs  chunk_pool.rs  data_serializer.rs  messages.rs  mod.rs  primitive_serializer.rs  props.rs  types.rs  work_bag.rs
hurricane/src/communication/: app_master_comm.rs  hurricane_io_comm.rs  hurricane_work_io_comm.rs  mod.rs  task_manager_comm.rs
hurricane/src/frontend/: bag_io_mock.rs  cloning_strategy.rs  hurricane_frontend.rs  hurricane_graph.rs  hurricane_work.rs  hurricane_work_io.rs  messages.rs  mod.rs  task_manager.rs  task_manager_core.rs
hurricane/src/util/: config.rs  config_parser.rs  mod.rs  split_by.rs
hurricane/tests/data/: incomplete_config.json  test_config.json
