[package]
name = "hurricane"
version = "0.1.0"
authors = ["Lichen Liu <issac.liu@mail.utoronto.ca>"]
edition = "2018"

[lib]
name = "hurricanelib"
path = "src/lib.rs"

[dependencies]
actix = "0.7"
bincode = "1.1"
bit-vec = "0.5"
byteorder = "1.3"
bytes = "0.4"
chrono = "0.4"
config = "0.9"
env_logger = "0.6"
futures = "0.1"
itertools = "0.8"
log = "0.4"
rand = "0.6"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.8"
tokio = "1.18"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-retry = "0.2"
tokio-tcp = "0.1"
uuid = { version = "0.7", features = ["serde", "v4"] }